--- a/templates/dashboard/pages/viewQuotes/viewQuotes.html
+++ b/templates/dashboard/pages/viewQuotes/viewQuotes.html
@@ -1,7 +1,7 @@
 {{> header currentpage='manageTrips'}}
-<div class='manage-trips'>
+<div class='trips-quotes'>
     
-     <div class='manage-trips-content'>            
+     <div class='trip-quotes-content'>            
     </div>
 </div> 
 {{{{raw-helper}}}}
@@ -149,27 +149,14 @@
                 </div>  
             </div>
             {{/if}}
-           <!--  {{#if (ifArray comments)}}            
-                <div class="grid-row-title">Comments:</div>  
-                <div class="row">     
-                    <div class="grid-row-tile col-sm-12">                
-                        <div>
-                            <span class="grid-row-tile-text">
-                                {{#each comments}}
-                                    {{this}} <br/>
-                                {{/each}}
-                            </span>
-                        </div>                                           
-                    </div>  
-                </div>
-            {{/if}} -->
             {{#if quotes}}
                 <div class="grid-row-title">Quote:</div> 
                 <div class="row">     
                     <div class="grid-row-tile col-sm-12">                
                         <div>
                             <span class="grid-row-tile-text">
-                                {{quotes.cost}} 
+                                {{quotes.cost}} Rs(&#8377;)
+                                {{quotes.comment}}
                             </span>
                         </div>                                           
                     </div>  
@@ -196,9 +183,13 @@
     <div class="row grid-row">       
         <div class="col-sm-12">
             <div class="pull-right">
+                <button type="button" class="btn btn-default btn-primary edit-trip" _id="{{_id}}">Edit</button>
                 <button type="button" class="btn btn-default btn-primary comments-trip" _id="{{_id}}">Comments</button>
-                  <!-- <button type="button" class="btn btn-default btn-primary set-status-trip" _id="{{_id}}">Set Status</button>  -->
-                <!-- <button type="button" class="btn btn-default btn-primary edit-trip" _id="{{_id}}">Edit</button> -->
+                <!-- <button type="button" class="btn btn-default btn-primary docs-trip" _id="{{_id}}">Documents</button> -->
+                <button type="button" class="btn btn-default btn-primary approve-quote" _id="{{_id}}">Approve</button>
+                <button type="button" class="btn btn-default btn-primary reject-quote" _id="{{_id}}">Reject</button>
+                <button type="button" class="btn btn-default btn-primary cancel-trip" _id="{{_id}}">Cancel Trip</button>
+                
             </div>
         </div>       
     </div>
@@ -241,4 +232,33 @@
     </div>
 </div>
 </script>
+
+
+<script id="myModal" type="text/x-handlebars-template"> 
+    <div class="modal fade" id="myModalid" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+             <div class="modal-dialog">
+                 <div class="modal-content">
+                   <div class="modal-header">
+                       <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+                           &times;
+                       </button>
+                       <h4 class="modal-title" id="myModalLabel">Are you sure?</h4>
+                   </div>
+                   <div class="modal-body myModalclass">
+                        If approved, payment is mandatory and once payment is received suitable truck & driver will be assigned to your trip.
+                   </div>
+                       
+                   <div class="modal-footer">
+                        <button type="submit" id="yes" class="btn btn-primary" name="submit" value="submit">
+                          Yes
+                      </button> 
+                       <button name="cancel" value="cancel" class="btn btn-default" data-dismiss="modal">
+                           Cancel
+                       </button>
+                   </div>
+                   </div>
+                   </div> 
+        </div>
+    </script> 
+
 {{{{/raw-helper}}}}
