--- a/templates/dashboard/pages/paymentPending/paymentPending.html
+++ b/templates/dashboard/pages/paymentPending/paymentPending.html
@@ -1,6 +1,6 @@
-{{> header}}
-<div class='trip-requests'>
-    <div class='trip-requests-content'>            
+{{> header currentpage='manageTrips'}}
+<div class='paymentPending-trips'>
+    <div class='paymentPending-trips-content'>            
     </div>
 </div> 
 {{{{raw-helper}}}}
@@ -8,8 +8,8 @@
   <div class="container-fluid">
     <div class="row grid-row">
         <div class="col-sm-4 grid-row-container">
-            <div class="grid-row-title">Pickup point(s):</div>                      
-                {{#each trips.0.pickup}}
+            <div class="grid-row-title">Pickup point:</div>                      
+                {{#with pickup}}
                     {{{exceptOnFirst @index '<hr/>'}}}
                     <div class="row">     
                         <div class="grid-row-tile col-sm-12">                
@@ -20,12 +20,15 @@
                             <div>
                                 <span class="grid-row-tile-label">Address</span>
                                 <span class="grid-row-tile-text">
-                                    {{#if address.street}} {{address.street}}, {{/if}}
-                                    {{address.city}}, {{address.state}}, {{address.zip}}.
+                                    {{#if address.organisation}} {{address.organisation}}, {{/if}}
+                                    {{#if address.city}} {{address.city}}, {{/if}}
+                                    {{#if address.location}}
+                                    {{address.location}}, {{/if}} {{#if address.zip}}{{address.zip}}.{{/if}}
                                 </span>                    
                             </div>                            
                         </div>  
                     </div>
+                    {{#if contact}}
                     <div class="row"> 
                          <div class="grid-row-tile col-sm-12">
                             <span class="grid-row-tile-label">Contact(s)</span>
@@ -40,11 +43,12 @@
                             </div>
                         </div> 
                     </div> 
+                    {{/if}}
                     <div class="row"> 
                          <div class="grid-row-tile col-sm-12">
                             <span class="grid-row-tile-label">Material(s)</span>
                             <div>        
-                                {{#each material}} 
+                                {{#with material}} 
                                     <div>                                        
                                          <span class="grid-row-tile-text">
                                             {{name}} 
@@ -53,30 +57,35 @@
                                             {{#if approximateCost}} - valued at {{currency approximateCost}} {{/if}}
                                         </span>                   
                                     </div>                                                                             
-                                {{/each}}
+                                {{/with}}
                             </div>
                         </div> 
                     </div>                    
-                {{/each}}                                   
+                {{/with}}                                   
         </div>   
         <div class="col-sm-4 grid-row-container">
-            <div class="grid-row-title">Drop point(s):</div>                      
-                {{#each trips.0.drop}}
+            <div class="grid-row-title">Drop point:</div>                      
+                {{#with drop}}
                     <div class="row">     
                         <div class="grid-row-tile col-sm-12">                
+                            {{#if date}}
                             <div>
                                 <span class="grid-row-tile-label">Date & time</span>
                                 <span class="grid-row-tile-text">{{date}}</span>
                             </div>
+                            {{/if}}
                             <div>
                                 <span class="grid-row-tile-label">Address</span>
                                 <span class="grid-row-tile-text">
-                                    {{#if address.street}} {{address.street}}, {{/if}}
-                                    {{address.city}}, {{address.state}}, {{address.zip}}.
+                                    {{#if address.organisation}} {{address.organisation}}, {{/if}}
+                                    {{#if address.city}} {{address.city}}, {{/if}}
+                                    {{#if address.location}}
+                                    {{address.location}}, {{/if}} {{#if address.zip}}{{address.zip}}.{{/if}}
                                 </span>                    
                             </div>                            
                         </div>  
                     </div>
+                    {{#if contact}}
                     <div class="row"> 
                          <div class="grid-row-tile col-sm-12">
                             <span class="grid-row-tile-label">Contact(s)</span>
@@ -91,53 +100,80 @@
                             </div>
                         </div> 
                     </div> 
+                    {{/if}}
+                    {{#if itemsToDrop}}
                     <div class="row"> 
                          <div class="grid-row-tile col-sm-12">
                             <div>        
                                 <span class="grid-row-tile-label">Items to drop</span>
                                 <span class="grid-row-tile-text">
+                                    {{#if itemsToDrop}}
                                     {{commaSeperatedArray itemsToDrop}}                                    
+                                    {{/if}}
                                 </span>
                             </div>
                         </div> 
-                    </div>                                     
-                {{/each}}                                   
+                    </div>           
+                    {{/if}}                          
+                {{/with}}                                   
         </div>  
         <div class="col-sm-4 grid-row-container">
-            <div class="grid-row-title">Bid amount (in Rs):</div> 
+            <div class="grid-row-title">Vehicle Requirements:</div> 
             <div class="row">     
                 <div class="grid-row-tile col-sm-12">                
                     <div>
                         <span class="grid-row-tile-text">
-                                {{priceQuote}}
+                            {{#with vehicleRequirements}}
+                                <div>
+                                    {{vehicleType}}
+                                    {{#if requiredCapacity}}
+                                     with capacity {{requiredCapacity}} {{capacityUnit}} 
+                                     {{/if}}
+                                    {{#if minRating}} with rating {{minRating}} {{/if}}
+                                </div>
+                            {{/with}}
                         </span>
                     </div>                                           
                 </div>  
             </div>
-            <div class="grid-row-title">Bid by:</div> 
+            {{#if totalWeight}}
+            <div class="grid-row-title">Total Weight:</div> 
              <div class="row">     
                 <div class="grid-row-tile col-sm-12">                
                     <div>
-                        <span class="grid-row-tile-text">
-                            {{fromUser}}
+                        <span class="grid-row-tile-text">  
+                            {{totalWeight}} {{totalWeightUnit}}
                         </span>
                     </div>                                           
                 </div>  
             </div>
-            {{#if message}}
-                <div class="grid-row-title">Message:</div> 
+            {{/if}}
+            {{#if truckdetails}}            
+                <div class="grid-row-title">Truckdetails:</div>  
                 <div class="row">     
                     <div class="grid-row-tile col-sm-12">                
                         <div>
                             <span class="grid-row-tile-text">
-                                {{message}} 
+                            {{plateNumber}} {{truckType}}
+                            </span>
+                        </div>                                           
+                    </div>  
+                </div>
+             {{/if}} 
+            {{#if quotes}}
+                <div class="grid-row-title">TripCost:</div> 
+                <div class="row">     
+                    <div class="grid-row-tile col-sm-12">                
+                        <div>
+                            <span class="grid-row-tile-text">
+                                {{quotes.cost}} 
                             </span>
                         </div>                                           
                     </div>  
                 </div>
             {{/if}}
 
-             <div class="grid-row-title">Status:</div> 
+            <div class="grid-row-title">Status:</div> 
              <div class="row">     
                 <div class="grid-row-tile col-sm-12">                
                     <div>
@@ -147,6 +183,7 @@
                     </div>                                           
                 </div>  
             </div>
+
         </div>     
     </div>
   </div>
@@ -156,19 +193,21 @@
     <div class="row grid-row">       
         <div class="col-sm-12">
             <div class="pull-right">
-                <button type="button" class="btn btn-default btn-primary approve-bid" _id="{{_id}}">Approve</button>
-                 <button type="button" class="btn btn-default btn-primary reject-bid" _id="{{_id}}">Reject</button>
+                <button type="button" class="btn btn-default btn-primary comments-trip" _id="{{_id}}">Comments</button>             
+                <button type="button" class="btn btn-default btn-primary docs-trip" _id="{{_id}}">Documents</button>
+                <button type="button" class="btn btn-default btn-primary view-details" _id="{{_id}}">View Details</button>
+                <button type="button" class="btn btn-default btn-primary payment" _id="{{_id}}">Payment</button>
             </div>
         </div>       
     </div>
   </div>
-</script>   
+</script>
 <script id="grid-row-template" type="text/x-handlebars-template">
   <div class="container-fluid">
     <div class="row grid-row">
         <div class="col-sm-12 grid-row-container">
             <span class="grid-row-title">Pickup</span> at 
-            {{#each pickup}}
+            {{#with pickup}}
                 {{address.street}}, {{address.city}} on {{date}}
                 {{{exceptOnFirst @index ','}}}
                 (<span class="grid-row-title">Contact:</span>             
@@ -177,14 +216,14 @@
                     {{{exceptOnFirst @index ','}}}
                 {{/each}})
                 (<span class="grid-row-title">Material:</span> 
-                {{#each material}} 
+                {{#if material}} 
                     {{name}} - {{materialType}}
                     {{{exceptOnFirst @index ','}}}
-                {{/each}})
-            {{/each}}            
+                {{/if}})
+            {{/with}}            
             <br/>
             <span class="grid-row-title">Drop</span> at 
-            {{#each drop}}
+            {{#with drop}}
                 {{address.city}} on {{date}}
                 {{{exceptOnFirst @index ','}}}
                 (<span class="grid-row-title">Contact:</span> 
@@ -195,52 +234,9 @@
                 (<span class="grid-row-title">Items:</span> 
                 {{itemsToDrop}}
                 )
-            {{/each}}                       
+            {{/with}}                       
         </div>
     </div>
 </div>
 </script>
-
-
- <!-- Modal related templates -->
-
-<script id="grid-trucks-template" type="text/x-handlebars-template">
-    
-    <div class="container-fluid">
-                    <div class="row grid-row">
-
-                         <div class="col-md-3 col-lg-3 " align="center"> 
-                           <img alt="Truck Pic" height="150" width="150" src="/img/noimage.png" class="img-circle img-responsive">
-                        </div> 
-                        <div class="col-md-5">
-                          
-                             <div class="row">
-                               <div class="col-md-5"><dt>Plate Number </dt></div> <div class="col-md-3">{{plateNumber}}</div>
-                             </div>
-
-                             <div class="row">
-                               <div class="col-md-5"><dt>Model  </dt></div> <div class="col-md-4">{{model}}</div>
-                             </div>
-
-
-                             <div class="row">
-                               <div class="col-md-5"><dt>TruckType </dt> </div><div class="col-md-4">{{truckType}}</div>
-                             </div>
-                            
-                             <div class="row">
-                               <div class="col-md-5"><dt>Capacity </dt> </div><div class="col-md-4">{{capacity}} {{ capacityUnits}}</div>
-                             </div>
-
-                              <div class="row">
-                               <div class="col-md-5 "><dt>Status </dt> </div><div class="col-md-4">{{status}}</div>
-                             </div>
-                        </div>
-
-                                
-                    </div>
-                    
-                  </div>
-
-</script>
-
 {{{{/raw-helper}}}}
